@@ -7,20 +7,28 @@
    <artifactId>vodsl.parent</artifactId>
    <packaging>pom</packaging>
    <properties>
-      <tycho-version>1.2.0</tycho-version>
-      <tycho-extras-version>1.2.0</tycho-extras-version>
-      <xtextVersion>2.15.0</xtextVersion>
+      <xtextVersion>2.16.0</xtextVersion>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <maven.compiler.source>1.8</maven.compiler.source>
       <maven.compiler.target>1.8</maven.compiler.target>
+      <tycho-version>1.3.0</tycho-version>
+      <tycho-extras-version>1.3.0</tycho-extras-version>
+		<!-- Define overridable properties for tycho-surefire-plugin -->
+		<platformSystemProperties></platformSystemProperties>
+		<moduleProperties></moduleProperties>
+		<systemProperties></systemProperties>
+		<tycho.testArgLine></tycho.testArgLine>
    </properties>
    <modules>
-      <module>net.ivoa.vodml</module>
-      <module>net.ivoa.vodml.ui</module>
-      <module>net.ivoa.vodml.ide</module>
+      <module>net.ivoa.vodsl</module>
+      <module>net.ivoa.vodsl.ui</module>
+      <module>net.ivoa.vodsl.ide</module>
       <module>eclipse.target</module>
-      <module>net.ivoa.vodml.sdk</module>
+      <module>net.ivoa.vodsl.sdk</module>
       <module>eclipse.repository</module>
+	<!--       <module>net.ivoa.vodsl.tests</module> -->
+	<!--       <module>net.ivoa.vodsl.ui.tests</module> -->
+      
       <!-- <module>vodsl.standalone</module> -->
       <!-- <module>javaparser</module> -->
    </modules>
@@ -31,15 +39,6 @@
             <artifactId>tycho-maven-plugin</artifactId>
             <version>${tycho-version}</version>
             <extensions>true</extensions>
-         </plugin>
-         <plugin>
-            <groupId>org.eclipse.tycho</groupId>
-            <artifactId>tycho-compiler-plugin</artifactId>
-            <version>${tycho-version}</version>
-            <configuration>
-               <source>${maven.compiler.source}</source>
-               <target>${maven.compiler.target}</target>
-            </configuration>
          </plugin>
          <plugin>
             <groupId>org.eclipse.tycho</groupId>
@@ -170,96 +169,133 @@
                         <includes>
                            <include>**/*</include>
                         </includes>
-                        <directory>${basedir}/xtend-gen</directory>
-                        <includes>
-                           <include>**/*</include>
-                        </includes>
                      </fileset>
                   </filesets>
                </configuration>
             </plugin>
-            <plugin>
-               <groupId>org.eclipse.m2e</groupId>
-               <artifactId>lifecycle-mapping</artifactId>
-               <version>1.0.0</version>
-               <configuration>
-                  <lifecycleMappingMetadata>
-                     <pluginExecutions>
-                        <pluginExecution>
-                           <pluginExecutionFilter>
-                              <groupId> org.apache.maven.plugins 
-                              </groupId>
-                              <artifactId> maven-resources-plugin 
-                              </artifactId>
-                              <versionRange> [2.4.3,) 
-                              </versionRange>
-                              <goals>
-                                 <goal>resources</goal>
-                                 <goal>testResources</goal>
-                              </goals>
-                           </pluginExecutionFilter>
-                           <action>
-                              <ignore></ignore>
-                           </action>
-                        </pluginExecution>
-                        <pluginExecution>
-                           <pluginExecutionFilter>
-                              <groupId> org.codehaus.mojo 
-                              </groupId>
-                              <artifactId> build-helper-maven-plugin 
-                              </artifactId>
-                              <versionRange> [1.9.1,) 
-                              </versionRange>
-                              <goals>
-                                 <goal>add-resource</goal>
-                                 <goal>add-source</goal>
-                                 <goal>add-test-resource</goal>
-                                 <goal>add-test-source</goal>
-                              </goals>
-                           </pluginExecutionFilter>
-                           <action>
-                              <ignore></ignore>
-                           </action>
-                        </pluginExecution>
-                        <pluginExecution>
-                           <pluginExecutionFilter>
-                              <groupId> org.eclipse.tycho 
-                              </groupId>
-                              <artifactId> tycho-compiler-plugin 
-                              </artifactId>
-                              <versionRange> [0.23.1,) 
-                              </versionRange>
-                              <goals>
-                                 <goal>compile</goal>
-                              </goals>
-                           </pluginExecutionFilter>
-                           <action>
-                              <ignore></ignore>
-                           </action>
-                        </pluginExecution>
-                        <pluginExecution>
-                           <pluginExecutionFilter>
-                              <groupId> org.eclipse.tycho 
-                              </groupId>
-                              <artifactId> tycho-packaging-plugin 
-                              </artifactId>
-                              <versionRange> [0.23.1,) 
-                              </versionRange>
-                              <goals>
-                                 <goal>build-qualifier</goal>
-                                 <goal>build-qualifier-aggregator</goal>
-                                 <goal>validate-id</goal>
-                                 <goal>validate-version</goal>
-                              </goals>
-                           </pluginExecutionFilter>
-                           <action>
-                              <ignore></ignore>
-                           </action>
-                        </pluginExecution>
-                     </pluginExecutions>
-                  </lifecycleMappingMetadata>
-               </configuration>
-            </plugin>
+ 			<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											org.apache.maven.plugins
+										</groupId>
+										<artifactId>
+											maven-resources-plugin
+										</artifactId>
+										<versionRange>
+											[2.4.3,)
+										</versionRange>
+										<goals>
+											<goal>resources</goal>
+											<goal>testResources</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											org.codehaus.mojo
+										</groupId>
+										<artifactId>
+											build-helper-maven-plugin
+										</artifactId>
+										<versionRange>
+											[1.9.1,)
+										</versionRange>
+										<goals>
+											<goal>add-resource</goal>
+											<goal>add-source</goal>
+											<goal>add-test-resource</goal>
+											<goal>add-test-source</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											org.eclipse.tycho
+										</groupId>
+										<artifactId>
+											tycho-compiler-plugin
+										</artifactId>
+										<versionRange>
+											[0.23.1,)
+										</versionRange>
+										<goals>
+											<goal>compile</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											org.eclipse.tycho
+										</groupId>
+										<artifactId>
+											tycho-packaging-plugin
+										</artifactId>
+										<versionRange>
+											[0.23.1,)
+										</versionRange>
+										<goals>
+											<goal>build-qualifier</goal>
+											<goal>build-qualifier-aggregator</goal>
+											<goal>validate-id</goal>
+											<goal>validate-version</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+				<plugin>
+					<!-- 
+						Can be removed after first generator execution
+						https://bugs.eclipse.org/bugs/show_bug.cgi?id=480097
+					-->
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-compiler-plugin</artifactId>
+					<version>${tycho-version}</version>
+					<configuration>
+						<compilerArgument>-err:-forbidden</compilerArgument>
+						<useProjectSettings>false</useProjectSettings>
+					</configuration>
+				</plugin>
+				<!-- to skip running (and compiling) tests use commandline flag: -Dmaven.test.skip
+					To skip tests, but still compile them, use: -DskipTests
+					To allow all tests in a pom to pass/fail, use commandline flag: -fae (fail
+					at end) -->
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-surefire-plugin</artifactId>
+					<version>${tycho-version}</version>
+					<configuration>
+						<!-- THE FOLLOWING LINE MUST NOT BE BROKEN BY AUTOFORMATTING -->
+						<argLine>${tycho.testArgLine} ${platformSystemProperties} ${systemProperties} ${moduleProperties}</argLine>
+						<failIfNoTests>false</failIfNoTests>
+						<useUIHarness>false</useUIHarness>
+					</configuration>
+				</plugin>
+	
          </plugins>
       </pluginManagement>
    </build>
@@ -299,4 +335,28 @@
          </snapshots>
       </pluginRepository>
    </pluginRepositories>
+   <profiles>
+		<profile>
+			<id>macos</id>
+			<activation>
+				<os>
+					<family>mac</family>
+				</os>
+			</activation>
+			<properties>
+				<!-- THE FOLLOWING LINE MUST NOT BE BROKEN BY AUTOFORMATTING -->
+				<platformSystemProperties>-XstartOnFirstThread</platformSystemProperties>
+			</properties>
+		</profile>
+		<profile>
+			<id>jdk9-or-newer</id>
+			<activation>
+				<jdk>[9,)</jdk>
+			</activation>
+			<properties>
+				<moduleProperties>--add-modules=ALL-SYSTEM</moduleProperties>
+			</properties>
+		</profile>
+	</profiles>
+   
 </project>
